--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <hr />
                   <div class="article mt-4">
                     <article>
-                      <a href="#" class="text-decoration-none">
+                      <a href="detail.html" class="text-decoration-none">
                         <div
                           class="writer d-flex justify-content-start align-items-center mb-2">
                           <img
