--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mediun Blog</title>
     <link rel="stylesheet" href="./css/app.css" />
+    <!-- Primary Meta Tags -->
+
+    <meta name="title" content="Mediun Blog Clone" />
+    <meta name="description" content="Testing with HTML5 CSS3 Bootstrap" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Mediun Blog Clone" />
+    <meta
+      property="og:description"
+      content="Testing with HTML5 CSS3 Bootstrap" />
+    <meta
+      property="og:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Mediun Blog Clone" />
+    <meta
+      property="twitter:description"
+      content="Testing with HTML5 CSS3 Bootstrap" />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png" />
   </head>
   <body style="height: 1500px">
     <header>
